fix align center

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -48,6 +48,7 @@ img {
 .gallery-box {
   max-width: 1440px;
   padding: 24px 156px;
+  margin: 0 auto;
 }
 .gallery {
   display: flex;
